// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense List with expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={3000}
      createdAt={0}
      description="Bin"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={50000}
      createdAt={-864000000}
      description="Gloves"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={500}
      createdAt={864000000}
      description="Cards"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render Expense list with empty message 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
